Actualizar mensajes de notificación y versión de API en la configuración

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,7 +11,7 @@ notifications:
 
 # Mensajes personalizables ({player} será reemplazado por el nombre del jugador)
 messages:
-  join: "✅ *{player}* entró al servidor"
-  quit: "❌ *{player}* salió del servidor"
-  death: "💀 *{player}* murió"
-  server_start: "🚀 Servidor iniciado"
+  join: "🟢 *{player}* entró al servidor"
+  quit: "🔴 *{player}* salió del servidor"
+  death: "✖️ *{player}* murió"
+  server_start: "🔵 Servidor iniciado"
